<resources>
    <string name="app_name">MVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">conette</string>
    <string name="no">No jobs saved</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Company Name</string>
    <string name="job_location">Job location</string>
    <string name="job_type">job type</string>
    <string name="job_title">Job Title</string>
    <string name="today">Today</string>
    <string name="job_app">Job App</string>
</resources>