<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:text="@string/today"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_date_range_24" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_delete_outline_24"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/job_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_job_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="6dp"
            android:text="@string/job_type"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />

        <TextView
            android:id="@+id/tv_job_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/job_location"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_baseline_add_location_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCompanyLogo"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>